@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.600 2004-09-05 21:10:08 castaglia Exp $
+$Id: NEWS,v 1.601 2004-09-05 21:29:00 castaglia Exp $
 
 CVS
 --------------------------------
@@ -9,6 +9,8 @@ CVS
 - Bug 2476 - Incorrect detection of symbolic link loop across devices.
 - Add support for a -V command-line option, which displays various
   compile-time settings.
+- Bug 2455 - Allow fine-tuning of how often mod_xfer updates the scoreboard.
+  This adds an --enable-tunable-scoreboard-updates configure option.
 
 1.2.10 - Released 04-Sep-2004
 --------------------------------
